DEVELOPER-2582 Fixed Page width for product pages on mobile

--- a/stylesheets/app.scss
+++ b/stylesheets/app.scss
@@ -963,6 +963,7 @@ body.mobile {
       }
       p {
         margin:0;
+        word-wrap: break-word;
       }
     }
   }
@@ -2003,6 +2004,10 @@ h2.home-title {
 
 h2.home-title {
   padding:40px 0 20px 0;
+}
+
+.literalblock {
+  word-wrap: break-word;
 }
 
 @include tablet-landscape-and-down {
